<resources>
    <string name="app_name">Bogra District</string>
    <string name="bogra">বগুড়া জেলার উপজেলা সমূহ</string>
    <string name="sonatola">সোনাতলা উপজেলা </string>
    <string name="sariakandi">সারিয়াকান্দি উপজেলা </string>
    <string name="sibgonj">শিবগঞ্জ উপজেলা </string>
    <string name="shahjahanpur">শাজাহানপুর উপজেলা</string>
    <string name="gabtoli">গাবতলী উপজেলা</string>
    <string name="kahalu">কাহালু উপজেলা</string>
    <string name="dhunot">ধুনট উপজেলা</string>
    <string name="serpur">শেরপুর উপজেলা</string>
    <string name="adomdighi">আদমদীঘি উপজেলা</string>
    <string name="nondigram">নন্দীগ্রাম উপজেলা</string>
    <string name="sador">বগুড়া সদর উপজেলা</string>
    <string name="dhupcaciya">দুপচাঁচিয়া উপজেলা</string>
    <string name="title_text">
        this is a title
    </string>
    <string name="message_text">
        Do you want to exit
    </string>

    <string name="bogra_text">
            বাংলাদেশে বগুড়া জেলার অবস্থান/n
            স্থানাঙ্ক: ২৪°৪৬′৪৮″ উত্তর ৮৯°২১′০″ পূর্বস্থানাঙ্ক: ২৪°৪৬′৪৮″ উত্তর ৮৯°২১′০″ পূর্ব |/n
            দেশ	 বাংলাদেশ/n
            বিভাগ	রাজশাহী বিভাগ/n
            আয়তন
             • মোট	২৮৯৮.২৫ কিমি২ (১১১৯.০২ বর্গমাইল)/n
            জনসংখ্যা (২০১১)
             • মোট	৩৫,৩৯,২৯৪/n
             • ঘনত্ব	১২০০/কিমি২ (৩২০০/বর্গমাইল)/n
            স্বাক্ষরতার হার
             • মোট	৪৯.৪৬%/n
            সময় অঞ্চল	বিএসটি (ইউটিসি+৬)
            পোস্ট কোড	৫৮০০ /n
            প্রশাসনিক
            বিভাগের কোড	৫০ ১০/n

            বগুড়া জেলা বাংলাদেশের উত্তর-পশ্চিমাঞ্চলের রাজশাহী বিভাগের একটি প্রশাসনিক অঞ্চল। বাংলাদেশের উত্তরবঙ্গে এক ঐতিহ্যবাহী প্রাচীন জনপদ গড়ে উঠেছিল এই বগুড়ায়। প্রাচীন পুন্ড রাজ্যের রাজধানী পুন্ডবর্ধন হচ্ছে এখনকার মহাস্তানগড় যা বগুড়া জেলায় অবস্থিত।/n/n
            বগুড়া জেলার উপজেলা গুলি হল -/n

            সোনাতলা উপজেলা/n
            আদমদিঘী উপজেলা/n
            বগুড়া সদর উপজেলা/n
            ধুনট উপজেলা/n
            দুপচাঁচিয়া উপজেলা/n
            গাবতলী উপজেলা/n
            কাহালু উপজেলা/n
            নন্দীগ্রাম উপজেলা/n
            সারিয়াকান্দি উপজেলা/n
            শেরপুর উপজেলা/n
            শিবগঞ্জ উপজেলা/n
            শাজাহানপুর উপজেলা/n
    </string>
    <string name="sonatola_text">
        সোনাতলা উপজেলা বগুড়া জেলা শহর হতে উত্তর-পূর্ব দিকে প্রায় ৩৫ কিলোমিটার দূরে অবস্থিত। উপজেলার দক্ষিনে সারিয়াকান্দি উপজেলা,দক্ষিণ-পশ্চিমে গাবতলী উপজেলা, পশ্চিমে শিবগঞ্জ উপজেলা এবং উত্তরে গোবিন্দগঞ্জ উপজেলা (গাইবান্ধা জেলা) অবস্থিত।/n/n
   সোনাতলা উপজেলার ০৭ টি ইউনিয়ন হল -/n

        সোনাতলা ইউনিয়ন/n
        বালুয়াহাট ইউনিয়ন/n
        দিগদাইড় ইউনিয়ন/n
        জোড়গাছা ইউনিয়ন/n
        মধুপুর ইউনিয়ন/n
        তেকানী চুকাইনগর ইউনিয়ন/n
        পাকুল্ল্যা ইউনিয়ন/n
    </string>
    <string name="sariyakandi_text">
        এ উপজেলার উত্তরে সোনাতলা উপজেলা, পূর্বে মাদারগঞ্জ উপজেলা, দক্ষিণে ধুনট উপজেলা এবং পশ্চিমে গাবতলী উপজেলা।/n/n
        এই উপজেলার ইউনিয়ন সমূহ হচ্ছে -/n

            চালুয়াবাড়ী ইউনিয়ন/n
            হাটশেরপুর ইউনিয়ন/n
            কাজলা ইউনিয়ন/n
            সারিয়াকান্দি সদর ইউনিয়ন/n
            নারচী ইউনিয়ন/n
            ফুলবাড়ী ইউনিয়ন/n
            কর্ণিবাড়ী ইউনিয়ন/n
            কুতুবপুর ইউনিয়ন/n
            ভেলাবাড়ী ইউনিয়ন/n
            চন্দনবাইশা ইউনিয়ন/n
            কামালপুর ইউনিয়ন/n
            বোহাইল ইউনিয়ন/n
    </string>
    <string name="sibgonj_text">
        এটি বগুড়া শহর থেকে উত্তর পশ্চিম দিকে অবস্থিত। এর মোট আয়তন প্রায় ৩১৫.৩৩ বর্গ কিলোমিটার। এ উপজেলার উত্তরে গাইবান্ধা জেলা, ,দক্ষিনে বগুড়া সদর উপজেলা ও কাহালু উপজেলা ও দুপচাঁচিয়া উপজেলা ,পূর্বে সোনাতলা উপজেলা ও গাবতলী উপজেলা এবং পশ্চিমে কালাই উপজেলা ও ক্ষেতলাল উপজেলা। বগুড়া জেলা শহর হতে ১৯ কিমিঃ উত্তরে গাংনই নদীর তীরে অবস্থিত। অবশ্য শিবগঞ্জ মূল করতোয়া নদীর তীরে অবস্থিত।/n/n
   শিবগঞ্জ উপজেলায় একটি থানা ও একটি পৌরসভাসহ (শিবগঞ্জ পৌরসভা) মোট ১২ টি ইউনিয়ন পরিষদ ও ৪৩৬ টি গ্রামের সমন্বয়ে গঠিত। ইউনিয়ন পরিষদগুলো হলঃ

            শিবগঞ্জ,
            বিহার,
            রায়নগর,
            বুড়িগঞ্জ,
            মাঝিহট্ট,
            পীরব,
            আটমূল,
            কিচক,
            ময়দানহাটা,
            দেউলি,
            মোকামতলা ও
            সৈয়দপুর।
    </string>
    <string name="shahjahanpur_text">
        বগুড়া শহর থেকে দূরত্ব ১০ কিমি। বগুড়া সদরের দক্ষিণ দিকে এর অবস্থান। শাহজাহানপুর উপজেলার উত্তরে বগুড়া সদর উপজেলা, দক্ষিণে শেরপুর উপজেলা পূর্বে গাবতলী উপজেলা ও ধুনট উপজেলা, পশ্চিমে নন্দীগ্রাম উপজেলা ও কাহালু উপজেলা অবস্থিত।/n/n
    এই উপজেলার ইউনিয়নসমূহ হল -

            আশেকপুর ইউনিয়ন/n
            মাদলা ইউনিয়ন/n
            মাঝিড়া ইউনিয়ন/n
            আড়িয়া ইউনিয়ন/n
            খরনা ইউনিয়ন/n
            গোহাইল ইউনিয়ন/n
            খোট্রাপাড়া ইউনিয়ন/n
            চোপীনগর ইউনিয়ন/n
            আমরুল ইউনিয়ন/n
    </string>
    <string name="gabtoli_text">

গাবতলী উপজেলা মানচিত্র
বগুড়া শহর থেকে এই উপজেলা প্রায় ১০ কিলোমিটার পূর্বে অবস্থিত। এর পূর্বে সারিয়াকান্দি উপজেলা, পশ্চিমে বগুড়া সদর ও শিবগঞ্জ উপজেলা, উত্তরে সোনাতলা উপজেলা এবং দক্ষিণে শাজাহানপুর উপজেলা।/n/n
এই উপজেলায় ১টি পৌরসভা (গাবতলী পৌরসভা), ১১টি ইউনিয়ন, ১০৪টি মৌজা ও ২১১টি গ্রাম, একটি পুলিশ থানা (গাবতলী মডেল থানা) ও একটি পুলিশ ফাঁড়ি (বাগবাড়ী) রয়েছে।[২] এটি বগুড়া-৭ সংসদীয় আসনের অধীন। গাবতলী উপজেলার ইউনিয়নসমুহ হলোঃ

        গাবতলী ইউনিয়ন/n
        নেপালতলী ইউনিয়ন;/n
        সোনারায় ইউনিয়ন;/n
        কাগইল ইউনিয়ন;/n
        রামেশ্বরপুর ইউনিয়ন;/n
        মহিষাবান ইউনিয়ন;/n
        দক্ষিণপাড়া ইউনিয়ন;/n
        দুর্গাহাটা ইউনিয়ন;/n
        বালিয়াদিঘী ইউনিয়ন;/n
        নাড়ুয়ামালা ইউনিয়ন এবং/n
        নশিপুর ইউনিয়ন।[৩]/n
</string>
    <string name="kahalu_text">
        বগুড়া জেলা সদর হতে ১২ কি:মি পশ্চিমে এই উপজেলার অবস্থান। এ উপজেলার উত্তরে শিবগঞ্জ উপজেলা, দক্ষিণে নন্দীগ্রাম উপজেলা, পূর্বে বগুড়া সদর উপজেলা এবং পশ্চিমে দুপচাঁচিয়া উপজেলা।/n/n

   কাহালু উপজেলার ইউনিয়নের সংখ্যা ০৯টি। ইউনিয়নসমূহ হচ্ছেঃ ০১ নং বীরকেদার ইউনিয়ন পরিষদ
        ০২ নং কালাই ইউনিয়ন পরিষদ/n
        ০৩ নং পাইকড় ইউনিয়ন পরিষদ/n
        ০৪ নং মুরইল ইউনিয়ন পরিষদ/n
        ০৫ নং কাহালু ইউনিয়ন পরিষদ/n
        ০৬ নং নারহট্ট ইউনিয়ন পরিষদ/n
        ০৭ নং দূর্গাপুর ইউনিয়ন পরিষদ/n
        ০৮ নং জামগ্রাম ইউনিয়ন পরিষদ/n
        ০৯ নং মালঞ্চা ইউনিয়ন পরিষদ/n
    </string>
    <string name="dhunot_text">
        এ উপজেলার উত্তরে সারিয়াকান্দি উপজেলা, দক্ষিনে সিরাজগঞ্জ জেলার রায়গঞ্জ উপজেলা, পশ্চিমে শেরপুর উপজেলা, পূর্বে কাজীপুর উপজেলা।/n/n
এই উপজেলায় ১০টি ইউনিয়ন রয়েছে। ইউনিয়নগুলো হলো:/n/n
                নিমগাছি ইউনিয়ন/n
        কালের পাড়া ইউনিয়ন/n
        চিকাশী ইউনিয়ন/n
        গোসাইবাড়ী ইউনিয়ন/n
        ভান্ডারবাড়ী ইউনিয়ন/n
        ধুনট ইউনিয়ন/n
        এলাঙ্গী ইউনিয়ন/n
        চৌকিবাড়ি ইউনিয়ন/n
        মথুরাপুর ইউনিয়ন/n
        গোপালনগর ইউনিয়ন/n
    </string>
    <string name="serpur_text">
        এই উপজেলার উত্তরে শাজাহানপুর উপজেলা পুর্বে ধুনট উপজেলা, দক্ষিনে রায়গঞ্জ উপজেলা, তাড়াস উপজেলা, পশ্চিমে সিংড়া উপজেলা, নন্দীগ্রাম উপজেলা অবস্থিত।/n/n
        শেরপুর উপজেলার ইউনিয়নসমূহ হচ্ছে -

        কুসুম্বী ইউনিয়ন/n
        গাড়ীদহ ইউনিয়ন/n
        খামারকান্দি ইউনিয়ন/n
        খানপুর ইউনিয়ন/n
        মির্জাপুর ইউনিয়ন/n
        বিশালপুর ইউনিয়ন/n
        ভবানীপুর ইউনিয়ন/n
        সুঘাট ইউনিয়ন/n
        সীমাবাড়ী ইউনিয়ন/n
        শাহ-বন্দেগী ইউনিয়ন/n
    </string>
    <string name="adomdighi_text">
        বগুড়া সদর থেকে আদমদিঘী উপজেলা সদরের দূরত্ব প্রায় ৩৫ কিলোমিটার। এ থানা উত্তরে জয়পুরহাট জেলার আক্কেলপুর উপজেলা ও স্বজেলার দুপচাঁচিয়া উপজেলা, পূর্বে স্বজেলার কাহালু উপজেলা ও নন্দীগ্রাম উপজেলা, দক্ষিণে নওগাঁ জেলার রানীনগর উপজেলা এবং পশ্চিমে নওগাঁ জেলার সদর থানা দ্বারা বেষ্টিত।/n/n

   আদমদিঘী উপজেলার ইউনিয়নসমূহ হচ্ছে -/n

        ছাতিয়ানগ্রাম/n
        নশরতপুর/n
        আদমদীঘি/n
        কুন্দগ্রাম/n
        চাঁপাপুর/n
      সান্তাহার[২]/n
    </string>
    <string name="nondigram_text">
        এই উপজেলার দক্ষিনে নাটোর জেলা পশ্চিমে কাহালু উপজেলা পূর্বে শেরপুর উপজেলা উত্তরে আদমদীঘি উপজেলা ও ধুপচাঁচিয়া উপজেলা।/n/n
        নন্দীগ্রাম উপজেলার ইউনিয়ন সমূহ -

        ১নং বুড়ইল ইউনিয়ন/n
        ২নং নন্দীগ্রাম ইউনিয়ন/n
        ৩নং ভাটরা ইউনিয়ন/n
        ৪নং থালতা মাঝগ্রাম ইউনিয়ন/n
        ৫নং ভাটগ্রাম ইউনিয়ন-/n
    </string>
    <string name="sador_text">
        বাংলাদেশের উত্তরবঙ্গে প্রবেশদার এক ঐতিহ্যবাহী প্রাচীন জনপদ বগুড়া। প্রাচীন পুন্ড রাজ্যের রাজধানী পুন্ডবর্ধন হচ্ছে বগুড়া। জেলা সদর হতে দূরত্ব ০৭ কিঃ মিঃ। উপজেলার আয়তন ১৭৭.৩৪ বর্গ কিলোমিটার। বগুড়া সদর এর উত্তরে-শিবগঞ্জ উপজেলা, দক্ষিণে শাজাহানপুর উপজেলা, পূর্বে গাবতলী উপজেলা এবং পশ্চিমে কাহালু উপজেলা।/n/n
        ১৯৮৩ সালের ১ ডিসেম্বর বগুড়া সদর থানাকে উপজেলায় রূপান্তরিত করা হয়। বগুড়া সদরে ২৫ টি ইউনিয়ন বা ওয়ার্ড আছে। ৩১০ টি মৌজা বা মহল্লা আছে। সর্বমোট ৩৪১টি গ্রাম আছে। সংসদীয় এলাকা ৪১-বগুড়া-৬ ( বগুড়া সদর)। ইউনিয়নের সংখ্যা ১১টি। এরুলিয়া, ফাঁপোর, সাবগ্রাম, নিশিন্দারা , রাজাপুর, শাখারিয়া, শেখেরকোলা, গোকুল, নুনগোলা, লাহিড়ীপাড়া, নামুজা। পৌরসভা ০১টি ( বগুড়া পৌরসভা ‘‘ক’’ শ্রেণিভূক্ত)। পৌরসভার কার্যক্রম শুরু ১৮৭৫ খ্রিঃ।/n/n


    </string>
    <string name="dhupcaciya_text">
        বগুড়া সদর থেকে দুপচাঁচিয়া উপজেলা সদরের দূরত্ব প্রায় ২০ কিলোমিটার। এর মোট আয়তন ১৬২.৪৫ বর্গ কিলোমিটার এবং দুপচাঁচিয়া পৌরসভার আয়তন প্রায় ১০.৯৩ বর্গ কিলোমিটার। এর পূর্ব পাশ দিয়ে নাগর নদী বয়ে গেছে। দুপচাঁচিয়া বগুড়া জেলার অন্যতম বড় একটি উপজেলা। দুপচাঁচিয়া এর উত্তরে- জয়পুরহাট জেলার ক্ষেতলাল উপজেলা, দক্ষিণে- বগুড়া জেলার আদমদীঘি উপজেলা ও কাহালু উপজেলা, পুর্বে-জয়পুরহাট জেলার আক্কেলপুর উপজেলা এবং বগুড়া জেলার কাহালু উপজেলা, পশ্চিমে-জয়পুরহাট জেলার আক্কেলপুর উপজেলা ও বগুড়া জেলার আদমদীঘি উপজেলা।/n/n
        দুপচাঁচিয়া পৌরসভা ২০০০ সালে প্রতিষ্ঠা লাভ করে। যা নয়টি ওয়ার্ড ও আটত্রিশটি মহল্লার সমন্বয়ে গঠিত। দুপচাঁচিয়া পৌরসভা ছাড়াও তালোড়া পৌরসভা নামে আরও একটি পৌরসভা ২০১২ সালে গঠিত হয়। এছারাও এই উপজেলার অন্তর্গত ৬ টি ইউনিয়ন, ১১৫ টি মৌজা এবং ২৩০ টি গ্রাম আছে। পোস্ট অফিস আছে ১১ টি।/n

    </string>
</resources>

